Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26523

QAudioInput prints the wrong stament on invalid format

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • 5.0.0
    • Multimedia
    • None
    • Ubuntu 32bit
    • 5daa9c340c6119f330f3b22acf15ff23b44a0631

    Description

      If you provide QAudioInput with and invalid format (eg: not setting the codec string), the following message is printed:

      "QAudioOutput: open error, invalid format."

      The message should print "QAudioInput" instead of "QAudioOutput".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            korbatit Kurt Korbatits (closed Nokia identity) (Inactive)
            goocreations Chris Stally
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes