Fixed error in qaudioinput alsa backend for invalid format.

QTBUG-26523
- Was QAudioOutput. Changed to QAudioInput.

Change-Id: I04f7d38af5cb67c420adef188b81b237b6e06b97
Reviewed-by: Daniel Kovacic <daniel.kovacic@nokia.com>